<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.pavel</groupId>
	<artifactId>englishHelper</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>englishHelper</name>
	<description>Demo project for Spring Boot</description>


	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
		<aspectj.version>1.9.9</aspectj.version>
		<allure-testng.version>2.13.9</allure-testng.version>
		<allure-maven.version>2.10.0</allure-maven.version>
		<hamcrest.version>1.3</hamcrest.version>
		<testng.version>7.5</testng.version>
		<log4j.version>1.2.17</log4j.version>
		<cucumber.version>5.7.0</cucumber.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${testng.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.26</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

</project>
